--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
     <div class="main">
         <div class="welcome_msg">
-            <h1>TEACHING ASSISTANTS FOR YOUR KIDS ARE HERE!!</h1>
+            <h1>THE BEST TEACHING ASSISTANTS FOR YOUR KIDS ARE HERE!!</h1>
             <p>Making Every Class Count!</p>
         </div>
 
